--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,52 @@
+p, h1, h2, h3 {
+    font-family: "Pacifico", serif
+};
+
+:root {
+    --main-color: rgb(2, 53, 2);
+    --secondary-color: white;
+    font-family: 'Pacifico';
+    scroll-behavior: smooth;
+}
+
+body {
+    max-width: 980px;
+    margin: auto;
+}
+
+h1, p {
+    margin: 0;
+    padding: 0;
+}
+
+header div h1 {
+    font-family: Pacifico;
+    font-size: 3rem;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+header nav .top-menu {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0;
+    list-style-type: none;
+}
+
+header nav .top-menu a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: var(--main-color);
+    border: 1px solid transparent;
+    padding: 5px;
+}
+
+header nav .top-menu a:hover {
+    border: 1px solid var(--main-color);
+}
+
+
 ul {
     list-style-type: none;
     margin: 0;
