--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,4 @@
-p, h1, h2, h3 {
-    font-family: "Pacifico", serif
-};
+@import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');
 
 :root {
     --main-color: rgb(2, 53, 2);
@@ -12,29 +10,62 @@ p, h1, h2, h3 {
 body {
     max-width: 980px;
     margin: auto;
+    background-color: white;
 }
+
+header h1 {
+    font-family: 'Pacifico', cursive;
+    font-size: 3rem;
+    text-align: center;
+    color: var(--main-color);
+}
+
+/* header .slogan {
+    background-image: url(../img/logo_sqr.png);
+    background-position: lefr;
+    background-size: 60% 60%;
+    /* min-height: 100px; */
+
+}
+
+/* header .slogan {
+    display: flex;
+    justify-content: right;
+    align-items: flex-start;
+    flex-direction: column;
+    font-size: 2rem;
+    color: var(--main-color);
+} */ */
 
 h1, p {
     margin: 0;
     padding: 0;
 }
 
-header div h1 {
+/* header div .logo {
     font-family: Pacifico;
-    font-size: 3rem;
+    font-size: 2rem;
+    color: var(--main-color);
     text-transform: uppercase;
     text-align: center;
 }
 
-header nav .top-menu {
+header div .logo img {
+    float: left;
+    width: 100px;
+    padding: 0;
+} */
+
+header nav .topmenu {
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 0;
+    margin: auto;
     list-style-type: none;
 }
 
-header nav .top-menu a {
+header nav .topmenu a {
     text-decoration: none;
     text-transform: uppercase;
     color: var(--main-color);
@@ -42,19 +73,50 @@ header nav .top-menu a {
     padding: 5px;
 }
 
-header nav .top-menu a:hover {
+header nav .topmenu .search {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: var(--main-color);
+    border: 1px solid transparent;
+    padding: 5px;
+}
+
+header nav .topmenu a:hover {
     border: 1px solid var(--main-color);
 }
 
+@media (min-width: 550px) {
+    header nav {
+        display: flex;
+    }
+}
+
+header .title {
+    background-image: url(../img/top.png);
+    background-position: center;
+    background-size: cover;
+    min-height: 500px;
+
+}
+
+header .title {
+    display: flex;
+    justify-content: left;
+    align-items: flex-start;
+    flex-direction: column;
+    font-size: 2rem;
+    color: lightcoral;
+}
+/* header .logo {
+    align-items: stretch; */
+/* }
 
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
+
 li {
     display: inline;
-}
-body {
-    background-color: antiquewhite;
-}
+} */
