--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,7 @@ header h1 {
     background-size: 60% 60%;
     /* min-height: 100px; */
 
-}
+/* } */
 
 /* header .slogan {
     display: flex;
@@ -35,7 +35,7 @@ header h1 {
     flex-direction: column;
     font-size: 2rem;
     color: var(--main-color);
-} */ */
+} */ 
 
 h1, p {
     margin: 0;
