--- a/css/index.css
+++ b/css/index.css
@@ -15,53 +15,30 @@ body {
 
 header h1 {
     font-family: 'Pacifico', cursive;
-    font-size: 3rem;
+    font-size: 38px;
     text-align: center;
     color: var(--main-color);
 }
-
-/* header .slogan {
-    background-image: url(../img/logo_sqr.png);
-    background-position: lefr;
-    background-size: 60% 60%;
-    /* min-height: 100px; */
-
-/* } */
-
-/* header .slogan {
-    display: flex;
-    justify-content: right;
-    align-items: flex-start;
-    flex-direction: column;
-    font-size: 2rem;
-    color: var(--main-color);
-} */ 
 
 h1, p {
     margin: 0;
     padding: 0;
 }
 
-/* header div .logo {
-    font-family: Pacifico;
-    font-size: 2rem;
-    color: var(--main-color);
-    text-transform: uppercase;
-    text-align: center;
+#logo {
+    display: flex;  
+    align-items: center;
 }
 
-header div .logo img {
-    float: left;
-    width: 100px;
-    padding: 0;
-} */
+#logoimg {
+    width: 150px;
+}
 
 header nav .topmenu {
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 0;
-    margin: auto;
     list-style-type: none;
 }
 
@@ -107,16 +84,30 @@ header .title {
     font-size: 2rem;
     color: lightcoral;
 }
-/* header .logo {
-    align-items: stretch; */
-/* }
+header .logo {
+    align-items: stretch; 
+}
 
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    width: 100;
 }
+
+/* #grid {
+    display: grid;
+    height: 200px;
+    grid-template-columns: 200px;
+    grid-template-rows: repeat(6, 1fr);
+  } */
 
 li {
     display: inline;
-} */
+}
+footer {
+    max-width: 980px;
+    margin: auto;
+    background-color:  rgb(178, 243, 178);
+    font-size: 20px;
+}
