--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Baloo+Thambi+2|Caveat|Indie+Flower|Muli|Satisfy&display=swap');
 
 :root {
     --main-color: rgb(2, 53, 2);
     --secondary-color: white;
-    font-family: 'Pacifico';
+    font-family: 'Indie Flower', cursive;
+    font-family: 'Baloo Thambi 2', cursive;
+    font-family: 'Muli', sans-serif;
+    font-family: 'Satisfy', cursive;
+    font-family: 'Caveat', cursive;
     scroll-behavior: smooth;
 }
 
@@ -11,12 +15,17 @@ body {
     max-width: 980px;
     margin: auto;
     background-color: white;
+    width: 100%;
 }
 
 header h1 {
-    font-family: 'Pacifico', cursive;
-    font-size: 38px;
-    text-align: center;
+    font-family: 'Indie Flower', cursive;
+    font-family: 'Baloo Thambi 2', cursive;
+    font-family: 'Muli', sans-serif;
+    font-family: 'Satisfy', cursive;
+    font-family: 'Caveat', cursive;
+    font-size: 3.5rem;
+    text-align: right;
     color: var(--main-color);
 }
 
@@ -40,11 +49,13 @@ header nav .topmenu {
     align-items: center;
     padding: 0;
     list-style-type: none;
+    flex-wrap: wrap;
 }
 
 header nav .topmenu a {
     text-decoration: none;
     text-transform: uppercase;
+    font-weight: bold;
     color: var(--main-color);
     border: 1px solid transparent;
     padding: 5px;
@@ -53,6 +64,7 @@ header nav .topmenu a {
 header nav .topmenu .search {
     text-decoration: none;
     text-transform: uppercase;
+    font-weight: bold;
     color: var(--main-color);
     border: 1px solid transparent;
     padding: 5px;
@@ -72,8 +84,9 @@ header .title {
     background-image: url(../img/top.png);
     background-position: center;
     background-size: cover;
-    min-height: 500px;
-
+    position: relative;
+    width: 100%;
+    overflow: hidden;
 }
 
 header .title {
@@ -81,26 +94,40 @@ header .title {
     justify-content: left;
     align-items: flex-start;
     flex-direction: column;
-    font-size: 2rem;
+    font-size: 3rem;
     color: lightcoral;
 }
 header .logo {
-    align-items: stretch; 
+    align-items: center; 
+    display: flex
+}
+header .icons {
+    flex: 1;
+    display: flex;
+    justify-content: left;
+    align-items: flex-start;
+    flex-direction: row-reverse;
+
+}
+
+.icon {
+    display: flex;
+    /* justify-content: space-around;
+    align-items: center;
+    flex-direction: row; */
+    width: 50px;
+    padding: 3px;
+    margin: 3px;
+    /* list-style-type: none; */
+    /* flex-wrap: hy; */
 }
 
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 100;
+    width: 100%;
 }
-
-/* #grid {
-    display: grid;
-    height: 200px;
-    grid-template-columns: 200px;
-    grid-template-rows: repeat(6, 1fr);
-  } */
 
 li {
     display: inline;
@@ -109,5 +136,54 @@ footer {
     max-width: 980px;
     margin: auto;
     background-color:  rgb(178, 243, 178);
-    font-size: 20px;
+    font-size: 24px;
+    width: 100%;
+}
+
+#text {
+    font-size: 30px;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
+
+td {
+    width: 700px;
+}
+
+#button, button {
+    
+    color: rgb(2, 53, 2);
+    background-color: rgb(178, 243, 178);
+    border-color: rgb(2, 53, 2);
+    border-radius: 4px;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 1rem;
+    padding: .375rem, .75rem;
+}
+
+.column {
+    flex: 50%;
+}
+
+.row {
+    display: flex;
+    /* /* justify-content: space-around;
+    align-items: center; */
+    /* flex-wrap: wrap; */
+}
+
+.item {
+    padding: 10px;
+    margin: 10px;
+}
+
+#summary {
+    font-size: 28px;
+    display:block;
+    width:x;
+    height:y;
+    text-align:right;
 }
